added custom text box

--- a/src/TidyWindow.App/App.xaml
+++ b/src/TidyWindow.App/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="pack://application:,,,/TidyWindow;component/Resources/ScrollBars.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/TidyWindow;component/Resources/CheckBoxes.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/TidyWindow;component/Resources/ComboBoxes.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/TidyWindow;component/Resources/TextBoxes.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
             <converters:BooleanToYesNoConverter x:Key="BooleanToYesNoConverter"/>
